# pendsim

./: LQR.html  LQR.ipynb  Linearization.html  PID.html  PID.ipynb  PlottingTutorial.html  README.md  StateEstimation.html  StateEstimation.ipynb  SwingUp.html  SwingUp.ipynb  customctl.html  customctl.ipynb  genindex.html  index.html  install.html  objects.inv  paper.md  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tutorial.html
.github/workflows/: main.yml
_modules/: index.html
_modules/pendsim/: controller.html  sim.html  utils.html  viz.html
_sources/: LQR.nblink.txt  tutorial.ipynb.txt
_sources/autoapi/pendsim/: index.rst.txt
_sources/autoapi/pendsim/controller/: index.rst.txt
_sources/autoapi/pendsim/sim/: index.rst.txt
_sources/autoapi/pendsim/test_controller/: index.rst.txt
_sources/autoapi/pendsim/utils/: index.rst.txt
_sources/autoapi/pendsim/viz/: index.rst.txt
autoapi/: index.html
autoapi/pendsim/: index.html
autoapi/pendsim/controller/: index.html
autoapi/pendsim/sim/: index.html
autoapi/pendsim/test_controller/: index.html
autoapi/pendsim/utils/: index.html
autoapi/pendsim/viz/: index.html
docs/: conf.py  index.rst  install.rst  tutorial.ipynb
notebooks/: LQR.ipynb  PID_controller_design_assignment.ipynb  linearization.ipynb  tutorial_plot_inline.ipynb
notebooks/pendsim/: __init__.py  controller.py
pendsim/: controller.py  sim.py
